--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-icons/all-files": "^4.1.0",
     "nanoid": "^4.0.0",
     "next": "12.2.2",
+    "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.53.0"
