--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.1",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.8.3",
+    "firebase": "^9.9.0",
     "framer-motion": "^6.5.1",
     "nanoid": "^4.0.0",
     "next": "12.2.2",
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
     "sass": "^1.53.0"
   },
   "devDependencies": {
