--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.1.5",
     "react-redux": "^8.0.2",
     "sass": "^1.53.0"
   },
