--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.1.5",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "sass": "^1.53.0"
   },
