--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-loader-spinner": "^5.1.5",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "usehooks-ts": "^2.6.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
