--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@firebase/auth-types": "^0.11.0",
+    "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.9.1",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.8.3",
