--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "firebase": "^9.9.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "hamburger-react": "^2.5.0",
     "nanoid": "^4.0.0",
     "next": "12.2.2",
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.1.5",
+    "react-notifications": "^1.7.4",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
+    "react-toastify": "^9.1.1",
     "sass": "^1.53.0",
     "usehooks-ts": "^2.6.0"
   },
